# Synthesizer

./: .gitignore  README.md
MATLAB/: .gitignore  adsr_envelope.m  bandpass.m  engine.m  envelope_validation.m  filter_block.m  filter_validation.m  highpass.m  lowpass.m  oscilator.m  oscillator.m  saw.m  sine.m  square.m  svf.m  triangle.m  voice.m  voicemanager.m
MATLAB/melodies/: super mario bros.txt
Plugin/: .gitignore  CMakeLists.txt  README.MD
Plugin/src/: Envelope.cpp  Envelope.h  GUI.cpp  GUI.h  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  SynthVoice.cpp  SynthVoice.h
Plugin/src/Filter/: RCFilter.cpp  RCFilter.h  VoiceFilter.cpp  VoiceFilter.h
Plugin/src/Oscillator/: Oscillator.cpp  Oscillator.h  OscillatorWrapper.cpp  OscillatorWrapper.h
Plugin/src/Oscillator/Waves/: Saw.cpp  Saw.h  Sine.cpp  Sine.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
